# homeAutomation

./: .env  .gitignore  Development.md  README.md  dnsmasq.conf  docker-compose-home.yml  docker-compose.yml  install-docker.sh  justfile  readme.md  server.md  vpn.md
RabbitMQ/: Dockerfile  push.sh
VPN/: readme.md
VPN/openvpn/: readme.md
VPN/unify-vpn/: login.sh  logout.sh  readme.md
VPN/wireguard-vpn/: readme.md
VPS/: readme.md
configurations/eclipse-mosquitto/: mosquitto.conf
configurations/home-assistant/: configuration-production.yaml  configuration.yaml
configurations/otel/: collector-config.yaml
configurations/prometheus/: prometheus.yml
configurations/traefik/: traefik.1.7.10.toml  traefik.yml
docker-compose/: docker-compose.yml
dockerfiles/: home-assistant.Dockerfile  power_control.Dockerfile
helm/: Chart.yaml  README.md  values-homeserver.yml
helm/scripts/: install.sh  registry-secret.sh  (+2 more)
home-assistant/: configuration.yaml
home-server/: .docker-compose.yml.swp  .env  .env.mariadb  docker-compose.yml  readme.md
microservices/weather/: .env  .gitignore  Cargo.toml  Dockerfile  Settings.toml  build-docker.sh  readme.md  run-docker.sh
microservices/weather/environment-variables/: .env
microservices/weather/scripts/: build-docker.sh  install.sh  run-docker.sh  weather.service  weather.timer
microservices/weather/src/: fetch.rs  input.rs  main.rs  mode.rs  write.rs
person-detection/: readme.md  script.py
raspberrypi/: docker-compose.yml
traefik/: traefik.1.7.10.toml
vpn/: readme.md
vpn-server/: docker-compose.yml
(+46 files in other folders)
