[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
config = "0.13.3"
env_logger = "0.10.0"
influxdb = { version = "0.6.0", features = ["derive"] }
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["json", "serde_json"] }
serde = { version = "1.0.162", features = ["serde_derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
